--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   autocomplete_textfield: ^2.0.1
   get: ^4.6.6
+  shared_preferences: ^2.2.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
